--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"GitHub User"},"headline":"TQ Compendium","name":"TQ Compendium","url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
+<link rel="stylesheet" href="assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
 </head>
 <body><header class="site-header">
 
