Fix links for publishing as a subdirectory

--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/armour.html">Armour</a><a class="page-link" href="/miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="/shields.html">Shields</a><a class="page-link" href="/skills.html">Skills</a><a class="page-link" href="/weapons.html">Weapons</a></div>
+        <div class="trigger"><a class="page-link" href="armour.html">Armour</a><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="shields.html">Shields</a><a class="page-link" href="skills.html">Skills</a><a class="page-link" href="weapons.html">Weapons</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="/armour.html">Armour</a></li><li><a class="page-link" href="/miscellaneous.html">Miscellaneous Items</a></li><li><a class="page-link" href="/shields.html">Shields</a></li><li><a class="page-link" href="/skills.html">Skills</a></li><li><a class="page-link" href="/weapons.html">Weapons</a></li></ul>
+        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="armour.html">Armour</a></li><li><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a></li><li><a class="page-link" href="shields.html">Shields</a></li><li><a class="page-link" href="skills.html">Skills</a></li><li><a class="page-link" href="weapons.html">Weapons</a></li></ul>
       </div>
     </main></body>
 
