--- a/armour.html
+++ b/armour.html
@@ -31,7 +31,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/armour.html">Armour</a><a class="page-link" href="/miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="/shields.html">Shields</a><a class="page-link" href="/skills.html">Skills</a><a class="page-link" href="/weapons.html">Weapons</a></div>
+        <div class="trigger"><a class="page-link" href="armour.html">Armour</a><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="shields.html">Shields</a><a class="page-link" href="skills.html">Skills</a><a class="page-link" href="weapons.html">Weapons</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
