Fix case sensitive images and grab latest

--- a/skills.html
+++ b/skills.html
@@ -84,9 +84,9 @@
       <td>- Alters enemy stats<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Steadfast Slash</span></span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
+      <td><span class="physical"><span class="record-name">Steadfast Slash</span></span><br /><span class="bar-descriptor">Sword and Axe only</span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>22</td>
-      <td> </td>
+      <td>- Accuracy is doubled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="physical"><span class="record-name">Carnivorous Blow</span></span><div class="bar"><span class="bar-fill" style="width:13%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -99,9 +99,9 @@
       <td>- Hits 4 times<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Bloodrush Crush</span></span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
+      <td><span class="physical"><span class="record-name">Bloodrush Crush</span></span><br /><span class="bar-descriptor">Bludgeon only</span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>22</td>
-      <td> </td>
+      <td>- Critical chance is quadrupled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="physical"><span class="record-name">Diamond Cutter</span></span><div class="bar"><span class="bar-fill" style="width:26%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -111,17 +111,17 @@
     <tr>
       <td><span class="physical"><span class="record-name">Aerial Assault</span></span><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>22</td>
-      <td> </td>
+      <td>- Accuracy is halved while using this skill<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Expunging Lunge</span></span><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="bar-descriptor">Damage</span></td>
+      <td><span class="physical"><span class="record-name">Expunging Lunge</span></span><br /><span class="bar-descriptor">Spear and Sword only</span><div class="bar"><span class="bar-fill" style="width:40%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>25</td>
-      <td> </td>
+      <td>- Enemy defence is reduced by two thirds while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="physical"><span class="record-name">Reckless Rack</span></span><div class="bar"><span class="bar-fill" style="width:66%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>40</td>
-      <td>- Alters user stats<br />- Lose a turn after using skill<br /></td>
+      <td>- Accuracy is halved while using this skill<br />- Alters user stats<br />- Lose a turn after using skill<br /></td>
     </tr>
     <tr>
       <td><span class="physical"><span class="record-name">Battery Cage</span></span><div class="bar"><span class="bar-fill" style="width:70%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -129,22 +129,22 @@
       <td>- Hits 7 times<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Bladedriver's Barbarity</span></span></td>
+      <td><span class="physical"><span class="record-name">Bladedriver's Barbarity</span></span><br /><span class="bar-descriptor">Sword only</span></td>
       <td>30</td>
       <td>- Alters user stats<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Pummeler's Precision</span></span></td>
+      <td><span class="physical"><span class="record-name">Pummeler's Precision</span></span><br /><span class="bar-descriptor">Bludgeon only</span></td>
       <td>30</td>
       <td>- Alters user stats<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Gashmaster's Grace</span></span></td>
+      <td><span class="physical"><span class="record-name">Gashmaster's Grace</span></span><br /><span class="bar-descriptor">Axe only</span></td>
       <td>30</td>
       <td>- Alters user stats<br /></td>
     </tr>
     <tr>
-      <td><span class="physical"><span class="record-name">Impaler's Impulse</span></span></td>
+      <td><span class="physical"><span class="record-name">Impaler's Impulse</span></span><br /><span class="bar-descriptor">Spear only</span></td>
       <td>30</td>
       <td>- Alters user stats<br /></td>
     </tr>
@@ -165,7 +165,7 @@
     <tr>
       <td><span class="physical"><span class="record-name">Power Lob</span></span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>5</td>
-      <td> </td>
+      <td>- Accuracy is halved while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="earth"><span class="record-name">Rock Shot</span></span><div class="bar"><span class="bar-fill" style="width:10%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -190,7 +190,7 @@
     <tr>
       <td><span class="physical"><span class="record-name">Bullseye Bolt</span></span><div class="bar"><span class="bar-fill" style="width:33%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>17</td>
-      <td> </td>
+      <td>- Accuracy is doubled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="ice"><span class="record-name">Freezing Arrow</span></span><div class="bar"><span class="bar-fill" style="width:13%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -349,7 +349,7 @@
     <tr>
       <td><span class="fire"><span class="record-name">Eruption</span></span><div class="bar"><span class="bar-fill" style="width:86%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>75</td>
-      <td> </td>
+      <td>- Critical chance is quadrupled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="lightning"><span class="record-name">Derecho</span></span><div class="bar"><span class="bar-fill" style="width:90%;"></span></div><span class="bar-descriptor">Damage</span></td>
@@ -364,12 +364,12 @@
     <tr>
       <td><span class="water"><span class="record-name">Tsunami</span></span><div class="bar"><span class="bar-fill" style="width:93%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>90</td>
-      <td> </td>
+      <td>- Critical chance is quadrupled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="earth"><span class="record-name">Fumarole</span></span><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="bar-descriptor">Damage</span></td>
       <td>100</td>
-      <td> </td>
+      <td>- Critical chance is quadrupled while using this skill<br /></td>
     </tr>
     <tr>
       <td><span class="physical"><span class="record-name">Cosmic Coincidence</span></span><div class="bar"><span class="bar-fill" style="width:100%;"></span></div><span class="bar-descriptor">Damage</span></td>
