--- a/index.html
+++ b/index.html
@@ -36,7 +36,10 @@
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="armour.html">Armour</a></li><li><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a></li><li><a class="page-link" href="shields.html">Shields</a></li><li><a class="page-link" href="skills.html">Skills</a></li><li><a class="page-link" href="weapons.html">Weapons</a></li></ul>
+        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="armour.html">Armour</a></li><li><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a></li><li><a class="page-link" href="shields.html">Shields</a></li><li><a class="page-link" href="skills.html">Skills</a></li><li><a class="page-link" href="weapons.html">Weapons</a></li></ul><p>
+  This site is for presenting game data for <a href="https://github.com/1bengardner/toshes-quest-ii">Toshe's Quest II</a>.
+</p>
+
       </div>
     </main></body>
 
