--- a/404.html
+++ b/404.html
@@ -17,7 +17,7 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"GitHub User"},"headline":"TQ Compendium","url":"http://localhost:4000/404.html"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
 </head>
 <body><header class="site-header">
 
@@ -31,7 +31,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="armour.html">Armour</a><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="shields.html">Shields</a><a class="page-link" href="skills.html">Skills</a><a class="page-link" href="weapons.html">Weapons</a></div>
+        <div class="trigger"><a class="page-link" href="/armour.html">Armour</a><a class="page-link" href="/miscellaneous.html">Items</a><a class="page-link" href="/shields.html">Shields</a><a class="page-link" href="/skills.html">Skills</a><a class="page-link" href="/weapons.html">Weapons</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
