--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <script type="application/ld+json">
 {"@context":"https://schema.org","@type":"WebSite","author":{"@type":"Person","name":"GitHub User"},"headline":"TQ Compendium","name":"TQ Compendium","url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
+<link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="TQ Compendium" />
 </head>
 <body><header class="site-header">
 
@@ -31,12 +31,12 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="armour.html">Armour</a><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a><a class="page-link" href="shields.html">Shields</a><a class="page-link" href="skills.html">Skills</a><a class="page-link" href="weapons.html">Weapons</a></div>
+        <div class="trigger"><a class="page-link" href="/armour.html">Armour</a><a class="page-link" href="/miscellaneous.html">Items</a><a class="page-link" href="/shields.html">Shields</a><a class="page-link" href="/skills.html">Skills</a><a class="page-link" href="/weapons.html">Weapons</a></div>
       </nav></div>
 </header>
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
-        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="armour.html">Armour</a></li><li><a class="page-link" href="miscellaneous.html">Miscellaneous Items</a></li><li><a class="page-link" href="shields.html">Shields</a></li><li><a class="page-link" href="skills.html">Skills</a></li><li><a class="page-link" href="weapons.html">Weapons</a></li></ul><p>
+        <h1>Toshe's Quest Compendium</h1><ul><li><a class="page-link" href="/armour.html">Armour</a></li><li><a class="page-link" href="/miscellaneous.html">Items</a></li><li><a class="page-link" href="/shields.html">Shields</a></li><li><a class="page-link" href="/skills.html">Skills</a></li><li><a class="page-link" href="/weapons.html">Weapons</a></li></ul><p>
   This site is for presenting game data for <a href="https://github.com/1bengardner/toshes-quest-ii">Toshe's Quest II</a>.
 </p>
 
