--- a/shields.html
+++ b/shields.html
@@ -197,7 +197,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:20%;"></span></div><span class="bar-descriptor water">20% Water</span></td>
     </tr>
     <tr>
-      <td><span class="record-name">Radiant Barrier</span><br /><img src="/assets/img/shields/radiant barrier.gif" alt="Radiant Barrier" /></td>
+      <td><span class="record-name">Pulsing Barrier</span><br /><img src="/assets/img/shields/pulsing barrier.gif" alt="Pulsing Barrier" /></td>
       <td>0</td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="bar-descriptor ">0</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="bar-descriptor ">0%</span></td>
@@ -267,7 +267,7 @@
       <td><div class="bar"><span class="bar-fill" style="width:25%;"></span></div><span class="bar-descriptor fire">25% Fire</span></td>
     </tr>
     <tr>
-      <td><span class="record-name">Glowing Barrier</span><br /><img src="/assets/img/shields/glowing barrier.gif" alt="Glowing Barrier" /></td>
+      <td><span class="record-name">Radiant Barrier</span><br /><img src="/assets/img/shields/radiant barrier.gif" alt="Radiant Barrier" /></td>
       <td>0</td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="bar-descriptor ">0</span></td>
       <td><div class="bar"><span class="bar-fill" style="width:0%;"></span></div><span class="bar-descriptor ">0%</span></td>
