--- a/shields.html
+++ b/shields.html
@@ -51,7 +51,7 @@
       <th>Shield</th>
       <th>Str.</th>
       <th>Defence</th>
-      <th>Block Chance<br /><span class="bar-descriptor">(Bar scaled to 11%)</span></th>
+      <th>Block Chance<br /><span class="bar-descriptor">Max. 11%</span></th>
       <th>Reduction</th>
     </tr>
   </thead>
