--- a/weapons.html
+++ b/weapons.html
@@ -60,7 +60,7 @@
       <th>Str.</th>
       <th>Accuracy</th>
       <th>Power</th>
-      <th>Crit Chance<br /><span class="bar-descriptor">(Bar scaled to 25%)</span></th>
+      <th>Crit Chance<br /><span class="bar-descriptor">Max. 25%</span></th>
     </tr>
   </thead>
   <tbody>
@@ -398,7 +398,7 @@
       <th>Dex.</th>
       <th>Accuracy</th>
       <th>Power</th>
-      <th>Crit Chance<br /><span class="bar-descriptor">(Bar scaled to 25%)</span></th>
+      <th>Crit Chance<br /><span class="bar-descriptor">Max. 25%</span></th>
     </tr>
   </thead>
   <tbody>
@@ -477,7 +477,7 @@
       <th>Wis.</th>
       <th>Accuracy</th>
       <th>Power</th>
-      <th>Crit Chance<br /><span class="bar-descriptor">(Bar scaled to 25%)</span></th>
+      <th>Crit Chance<br /><span class="bar-descriptor">Max. 25%</span></th>
     </tr>
   </thead>
   <tbody>
