--- a/compendium/armour.html
+++ b/compendium/armour.html
@@ -8,14 +8,14 @@
 <meta property="og:title" content="Armour" />
 <meta name="author" content="Ben Gardner" />
 <meta property="og:locale" content="en_US" />
-<link rel="canonical" href="http://localhost:4000/compendium/armour.html" />
-<meta property="og:url" content="http://localhost:4000/compendium/armour.html" />
+<link rel="canonical" href="http://localhost:4000/compendium/armour" />
+<meta property="og:url" content="http://localhost:4000/compendium/armour" />
 <meta property="og:site_name" content="Toshe’s Quest" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Armour" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Armour","url":"http://localhost:4000/compendium/armour.html"}</script>
+{"@context":"https://schema.org","@type":"WebPage","author":{"@type":"Person","name":"Ben Gardner"},"headline":"Armour","url":"http://localhost:4000/compendium/armour"}</script>
 <!-- End Jekyll SEO tag -->
 <link rel="stylesheet" href="/assets/css/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/feed.xml" title="Toshe&apos;s Quest" /><link rel="stylesheet" href="/assets/css/my-style.css">
 <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon.png">
@@ -38,7 +38,7 @@
           </span>
         </label>
 
-        <div class="trigger"><a class="page-link" href="/compendium/weapons.html">Weapons</a><a class="page-link" href="/compendium/armour.html">Armour</a><a class="page-link" href="/compendium/shields.html">Shields</a><a class="page-link" href="/compendium/miscellaneous.html">Items</a><a class="page-link" href="/compendium/skills.html">Skills</a></div>
+        <div class="trigger"><a class="page-link" href="/compendium/weapons">Weapons</a><a class="page-link" href="/compendium/armour">Armour</a><a class="page-link" href="/compendium/shields">Shields</a><a class="page-link" href="/compendium/miscellaneous">Items</a><a class="page-link" href="/compendium/skills">Skills</a></div>
       </nav></div>
 </header><main class="page-content" aria-label="Content">
       <div class="wrapper">
