--- a/tutorial.html
+++ b/tutorial.html
@@ -116,8 +116,8 @@
     <p>
       ...If you don't see this screen after double-clicking the game, I can't help you.
     </p>
-    <p>
-      <span style="font-size: 0.8em; vertical-align: top;">You did double-click the game, right?</span>
+    <p style="font-size: 0.8em;">
+      You did double-click the game, right?
     </p>
   </div>
 </div>
@@ -139,14 +139,15 @@
           href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
           target="_blank">
   </map>
-  <img usemap="#rr" class="figure" src="/assets/img/how-to-play/start.png" alt="Start screen screenshot" />
+  <img class="figure small-screens-only" src="/assets/img/how-to-play/start.png" alt="Start screen screenshot" />
+  <img usemap="#rr" class="figure large-screens-only" src="/assets/img/how-to-play/start.png" alt="Start screen screenshot" />
   <img class="nelvin-small" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" style="top: 300px; left: 170px;" />
   <div class="callout" style="top: 300px; left: 258px;" />
     <p>
       Click here!
     </p>
-    <p>
-      <span style="font-size: 0.8em; vertical-align: top;">In the game window, I mean. Not literally here.</span>
+    <p style="font-size: 0.8em;">
+      In the game window, I mean. Not literally here.
     </p>
   </div>
 </div>
@@ -162,6 +163,9 @@
 </p>
 <p>
   They're all slightly different. Choose the one that looks the most fun!
+</p>
+<p style="font-size: 0.8em;">
+  ...Or whichever one. Whichever one is fine. They're all good. Trust me.
 </p>
 </div>
 
@@ -248,16 +252,16 @@
     </p>
   </div>
   <img class="nelvin-small" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" style="top: 320px; left: 30px;" />
-  <div class="callout" style="top: 210px; left: 50px;" />
+  <div class="callout" style="top: 226px; left: 50px;" />
     <span class="item-number">Health</span>
     <p>
       Watch your health.
     </p>
-    <p>
-      <span style="font-size: 0.8em;">If you lose all your <strong><span class="hp">HP</span></strong>, you die.</span>
+    <p style="font-size: 0.8em;">
+      If you lose all your <strong><span class="hp">HP</span></strong>, you die.</>
     </p>
-    <p>
-      <span style="font-size: 0.6em; vertical-align: top;">(That's a bad thing.)</span>
+    <p style="font-size: 0.6em;">
+      (That's a bad thing.)
     </p>
   </div>
   <img class="nelvin-small" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" style="top: 470px; left: 450px;" />
@@ -280,8 +284,8 @@
     <p>
       Select a skill and click <span class="game-text">Use Skill</span>.
     </p>
-    <p>
-      <span style="font-size: 0.8em;">Skills consume <strong><span class="ep">EP</span></strong>.</span>
+    <p style="font-size: 0.8em;">
+      Skills consume <strong><span class="ep">EP</span></strong>.
     </p>
   </div>
 </div>
@@ -327,8 +331,8 @@
 <p>
   So you died. That's okay. Life goes on.
 </p>
-<p>
-  <span style="font-size: 0.8em; vertical-align: top;">...At least here it does.</span>
+<p style="font-size: 0.8em;">
+  ...At least here it does.
 </p>
 </div>
 
@@ -371,13 +375,13 @@
     </p>
   </div>
   <img class="nelvin-small" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" style="top: 400px; left: 10px;" />
-  <div class="callout" style="top: 320px; left: 78px;" />
+  <div class="callout" style="top: 330px; left: 78px;" />
     <span class="item-number">2: Equip</span>
     <p>
       Click equip to wear it.
     </p>
-    <p>
-      <span style="font-size: 0.8em; vertical-align: top;">Equipment turns cyan when worn.</span>
+    <p style="font-size: 0.8em;">
+      Equipment turns cyan when worn.
     </p>
   </div>
   <img class="nelvin-small" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" style="top: 460px; left: 520px;" />
