--- a/tutorial.html
+++ b/tutorial.html
@@ -168,7 +168,7 @@
   They're all slightly different. Choose the one that looks the most fun!
 </p>
 <p style="font-size: 0.8em;">
-  ...Or whichever one. Whichever one is fine. They're all good. Trust me.
+  Or whichever one. Whichever one is fine. They're all good. Trust me. Just pick one.
 </p>
 </div>
 
@@ -335,7 +335,7 @@
   So you died. That's okay. Life goes on.
 </p>
 <p style="font-size: 0.8em;">
-  ...At least here it does.
+  At least here it does.
 </p>
 </div>
 
