--- a/tutorial.html
+++ b/tutorial.html
@@ -433,14 +433,14 @@
 
 <hr />
 
-<img id="other-buttons" class="nelvin" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" />
+<img class="nelvin" src="/assets/img/how-to-play/nelvin.png" alt="Turtle" />
 <div class="callout">
 <p>
   Well done. You've made it through.
 </p>
 <br />
 <p>
-  For a deeper dive, check out these links:
+  If you want to dive deeper, check out these links:
   <ul>
     <li>
       <a href="shortcuts">Shortcuts/Hotkeys</a>
@@ -458,13 +458,12 @@
   Come back on a larger screen and I'll shell out the full explanation.
 </p>
 <hr />
-<p>
+<p id="other-buttons">
   Here are some bonus tips to help you out:
 </p>
 <ul>
   <li>Click <img src="/assets/img/icons/save.gif" alt="hard disk" /> to save your game.</li>
-  <li>Click <img src="/assets/img/icons/potion.gif" alt="potion" /> to drink a healing potion.<br /><span style="font-size: 0.8em; vertical-align: top;">(Blood-bearing enemies occasionally drop these when they die...gross.)</span></li>
-  <li>Click <img src="/assets/img/icons/mission log.gif" alt="mission log" /> to toggle the <span class="game-text">Mission Log</span>.</li>
+  <li>Click <img src="/assets/img/icons/potion.gif" alt="potion" /> to drink a healing potion.
 </ul>
 </div>
   </div>
