--- a/compendium/miscellaneous.html
+++ b/compendium/miscellaneous.html
@@ -69,31 +69,31 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">The Key to Macedonia</span><br /><img src="/assets/img/miscellaneous/the key to macedonia.gif" alt="The Key to Macedonia" /></td>
+      <td><span class="record-name">The Key to Macedonia</span><br /><img src="/assets/img/miscellaneous/the key to macedonia.gif" alt="The Key to Macedonia" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>It is time to save your homeland.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Key Mold</span><br /><img src="/assets/img/miscellaneous/key mold.gif" alt="Key Mold" /></td>
+      <td><span class="record-name">Key Mold</span><br /><img src="/assets/img/miscellaneous/key mold.gif" alt="Key Mold" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>This can be used to smith a key.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Letter from the Mayor</span><br /><img src="/assets/img/miscellaneous/letter from the mayor.gif" alt="Letter from the Mayor" /></td>
+      <td><span class="record-name">Letter from the Mayor</span><br /><img src="/assets/img/miscellaneous/letter from the mayor.gif" alt="Letter from the Mayor" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>This letter bears the signature of the Herceg Novi mayor.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Mysterious Parchment</span><br /><img src="/assets/img/miscellaneous/mysterious parchment.gif" alt="Mysterious Parchment" /></td>
+      <td><span class="record-name">Mysterious Parchment</span><br /><img src="/assets/img/miscellaneous/mysterious parchment.gif" alt="Mysterious Parchment" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>Sunken Writings Opaquely Reveal Death Fictitious Inside Soulless Hearts.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Presidential Map</span><br /><img src="/assets/img/miscellaneous/presidential map.gif" alt="Presidential Map" /></td>
+      <td><span class="record-name">Presidential Map</span><br /><img src="/assets/img/miscellaneous/presidential map.gif" alt="Presidential Map" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>This map indicates an X, two paces west of Pristina.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Greek Wall Blueprint</span><br /><img src="/assets/img/miscellaneous/greek wall blueprint.gif" alt="Greek Wall Blueprint" /></td>
+      <td><span class="record-name">Greek Wall Blueprint</span><br /><img src="/assets/img/miscellaneous/greek wall blueprint.gif" alt="Greek Wall Blueprint" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>These drawings depict the layout of the wall of Greece.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Oracular Orb</span><br /><img src="/assets/img/miscellaneous/oracular orb.gif" alt="Oracular Orb" /></td>
+      <td><span class="record-name">Oracular Orb</span><br /><img src="/assets/img/miscellaneous/oracular orb.gif" alt="Oracular Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">?</span></td>
       <td>A magical orb of great energy.</td>
     </tr>
   </tbody>
@@ -110,43 +110,43 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">Syvre Leaf</span><br /><img src="/assets/img/miscellaneous/syvre leaf.gif" alt="Syvre Leaf" /></td>
+      <td><span class="record-name">Syvre Leaf</span><br /><img src="/assets/img/miscellaneous/syvre leaf.gif" alt="Syvre Leaf" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>Be re-leafed.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /></td>
+      <td><span class="record-name">Brummo Mint</span><br /><img src="/assets/img/miscellaneous/brummo mint.gif" alt="Brummo Mint" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>This herb can have surprising effects at an unexpected time.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Nutritious Mushroom</span><br /><img src="/assets/img/miscellaneous/nutritious mushroom.gif" alt="Nutritious Mushroom" /></td>
+      <td><span class="record-name">Nutritious Mushroom</span><br /><img src="/assets/img/miscellaneous/nutritious mushroom.gif" alt="Nutritious Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>Restores all HP. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Delicious Mushroom</span><br /><img src="/assets/img/miscellaneous/delicious mushroom.gif" alt="Delicious Mushroom" /></td>
+      <td><span class="record-name">Delicious Mushroom</span><br /><img src="/assets/img/miscellaneous/delicious mushroom.gif" alt="Delicious Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>Restores all EP. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Big Mushroom</span><br /><img src="/assets/img/miscellaneous/big mushroom.gif" alt="Big Mushroom" /></td>
+      <td><span class="record-name">Big Mushroom</span><br /><img src="/assets/img/miscellaneous/big mushroom.gif" alt="Big Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1000</span></td>
       <td>Multiplies damage by 2. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Jagged Mushroom</span><br /><img src="/assets/img/miscellaneous/jagged mushroom.gif" alt="Jagged Mushroom" /></td>
+      <td><span class="record-name">Jagged Mushroom</span><br /><img src="/assets/img/miscellaneous/jagged mushroom.gif" alt="Jagged Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1000</span></td>
       <td>Increases crit chance by 25%. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Thick Mushroom</span><br /><img src="/assets/img/miscellaneous/thick mushroom.gif" alt="Thick Mushroom" /></td>
+      <td><span class="record-name">Thick Mushroom</span><br /><img src="/assets/img/miscellaneous/thick mushroom.gif" alt="Thick Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1000</span></td>
       <td>Multiplies defence by 2. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Magical Mushroom</span><br /><img src="/assets/img/miscellaneous/magical mushroom.gif" alt="Magical Mushroom" /></td>
+      <td><span class="record-name">Magical Mushroom</span><br /><img src="/assets/img/miscellaneous/magical mushroom.gif" alt="Magical Mushroom" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1500</span></td>
       <td>Increases all reductions by 25%. Attack to consume.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Psilocybin</span><br /><img src="/assets/img/miscellaneous/psilocybin.gif" alt="Psilocybin" /></td>
+      <td><span class="record-name">Psilocybin</span><br /><img src="/assets/img/miscellaneous/psilocybin.gif" alt="Psilocybin" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">3000</span></td>
       <td>May alter your experience.</td>
     </tr>
     <tr>
-      <td><span class="record-name">The good stuff!</span><br /><img src="/assets/img/miscellaneous/the good stuff!.gif" alt="The good stuff!" /></td>
+      <td><span class="record-name">The good stuff!</span><br /><img src="/assets/img/miscellaneous/the good stuff!.gif" alt="The good stuff!" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">6000</span></td>
       <td>Doubles your drop chance. May also kill you.</td>
     </tr>
   </tbody>
@@ -163,35 +163,35 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">Jade Crystal</span><br /><img src="/assets/img/miscellaneous/jade crystal.gif" alt="Jade Crystal" /></td>
+      <td><span class="record-name">Jade Crystal</span><br /><img src="/assets/img/miscellaneous/jade crystal.gif" alt="Jade Crystal" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Aquamarine Shard</span><br /><img src="/assets/img/miscellaneous/aquamarine shard.gif" alt="Aquamarine Shard" /></td>
+      <td><span class="record-name">Aquamarine Shard</span><br /><img src="/assets/img/miscellaneous/aquamarine shard.gif" alt="Aquamarine Shard" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Garnet Fragment</span><br /><img src="/assets/img/miscellaneous/garnet fragment.gif" alt="Garnet Fragment" /></td>
+      <td><span class="record-name">Garnet Fragment</span><br /><img src="/assets/img/miscellaneous/garnet fragment.gif" alt="Garnet Fragment" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">500</span></td>
       <td>This gem harnesses elemental power.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Gold Ore</span><br /><img src="/assets/img/miscellaneous/gold ore.gif" alt="Gold Ore" /></td>
+      <td><span class="record-name">Gold Ore</span><br /><img src="/assets/img/miscellaneous/gold ore.gif" alt="Gold Ore" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1000</span></td>
       <td>This can be refined into a valuable metal.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Gold Bar</span><br /><img src="/assets/img/miscellaneous/gold bar.gif" alt="Gold Bar" /></td>
+      <td><span class="record-name">Gold Bar</span><br /><img src="/assets/img/miscellaneous/gold bar.gif" alt="Gold Bar" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">3000</span></td>
       <td>A lightweight metal with strong resistive properties.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Golden Horn</span><br /><img src="/assets/img/miscellaneous/golden horn.gif" alt="Golden Horn" /></td>
+      <td><span class="record-name">Golden Horn</span><br /><img src="/assets/img/miscellaneous/golden horn.gif" alt="Golden Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>Changes forge success chance to 95%. One-time use.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Green Horn</span><br /><img src="/assets/img/miscellaneous/green horn.gif" alt="Green Horn" /></td>
+      <td><span class="record-name">Green Horn</span><br /><img src="/assets/img/miscellaneous/green horn.gif" alt="Green Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>Triples forge success chance. One-time use.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Purple Horn</span><br /><img src="/assets/img/miscellaneous/purple horn.gif" alt="Purple Horn" /></td>
+      <td><span class="record-name">Purple Horn</span><br /><img src="/assets/img/miscellaneous/purple horn.gif" alt="Purple Horn" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>Raises forge success chance by 1000%. One-time use.</td>
     </tr>
   </tbody>
@@ -208,7 +208,7 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">Scintillous Ring</span><br /><img src="/assets/img/miscellaneous/scintillous ring.gif" alt="Scintillous Ring" /></td>
+      <td><span class="record-name">Scintillous Ring</span><br /><img src="/assets/img/miscellaneous/scintillous ring.gif" alt="Scintillous Ring" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>Absorbs XP and increases luck while worn. Resets when unequipped.</td>
     </tr>
   </tbody>
@@ -225,23 +225,23 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">Macedonian Protector</span><br /><img src="/assets/img/miscellaneous/macedonian protector.gif" alt="Macedonian Protector" /></td>
+      <td><span class="record-name">Macedonian Protector</span><br /><img src="/assets/img/miscellaneous/macedonian protector.gif" alt="Macedonian Protector" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Increases block chance while defending.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Ominous Orb</span><br /><img src="/assets/img/miscellaneous/ominous orb.gif" alt="Ominous Orb" /></td>
+      <td><span class="record-name">Ominous Orb</span><br /><img src="/assets/img/miscellaneous/ominous orb.gif" alt="Ominous Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>This orb can be fused with its user to combine potentials.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Chasmic Rucksack</span><br /><img src="/assets/img/miscellaneous/chasmic rucksack.gif" alt="Chasmic Rucksack" /></td>
+      <td><span class="record-name">Chasmic Rucksack</span><br /><img src="/assets/img/miscellaneous/chasmic rucksack.gif" alt="Chasmic Rucksack" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">15000</span></td>
       <td>You could even fit a Telamon Shield in this.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Olympian Ointment</span><br /><img src="/assets/img/miscellaneous/olympian ointment.gif" alt="Olympian Ointment" /></td>
+      <td><span class="record-name">Olympian Ointment</span><br /><img src="/assets/img/miscellaneous/olympian ointment.gif" alt="Olympian Ointment" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">200</span></td>
       <td>A serum that can be applied to rock formations …with varying results.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Sigil of Ascension</span><br /><img src="/assets/img/miscellaneous/sigil of ascension.gif" alt="Sigil of Ascension" /></td>
+      <td><span class="record-name">Sigil of Ascension</span><br /><img src="/assets/img/miscellaneous/sigil of ascension.gif" alt="Sigil of Ascension" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">1</span></td>
       <td>Grants the bearer 5 rank points for every kill.</td>
     </tr>
   </tbody>
@@ -258,35 +258,35 @@
   </thead>
   <tbody>
     <tr>
-      <td><span class="record-name">Ranine Orb</span><br /><img src="/assets/img/miscellaneous/ranine orb.gif" alt="Ranine Orb" /></td>
+      <td><span class="record-name">Ranine Orb</span><br /><img src="/assets/img/miscellaneous/ranine orb.gif" alt="Ranine Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 5% water damage reduction.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Bulbous Orb</span><br /><img src="/assets/img/miscellaneous/bulbous orb.gif" alt="Bulbous Orb" /></td>
+      <td><span class="record-name">Bulbous Orb</span><br /><img src="/assets/img/miscellaneous/bulbous orb.gif" alt="Bulbous Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 5% earth damage reduction.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Fiery Orb</span><br /><img src="/assets/img/miscellaneous/fiery orb.gif" alt="Fiery Orb" /></td>
+      <td><span class="record-name">Fiery Orb</span><br /><img src="/assets/img/miscellaneous/fiery orb.gif" alt="Fiery Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 5% fire damage reduction.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Platinum Ball</span><br /><img src="/assets/img/miscellaneous/platinum ball.gif" alt="Platinum Ball" /></td>
+      <td><span class="record-name">Platinum Ball</span><br /><img src="/assets/img/miscellaneous/platinum ball.gif" alt="Platinum Ball" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">80000</span></td>
       <td>This is worth a lot of money.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Wizardly Orb</span><br /><img src="/assets/img/miscellaneous/wizardly orb.gif" alt="Wizardly Orb" /></td>
+      <td><span class="record-name">Wizardly Orb</span><br /><img src="/assets/img/miscellaneous/wizardly orb.gif" alt="Wizardly Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 3% elemental damage reduction.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Knightly Orb</span><br /><img src="/assets/img/miscellaneous/knightly orb.gif" alt="Knightly Orb" /></td>
+      <td><span class="record-name">Knightly Orb</span><br /><img src="/assets/img/miscellaneous/knightly orb.gif" alt="Knightly Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 3% block chance.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Feline Orb</span><br /><img src="/assets/img/miscellaneous/feline orb.gif" alt="Feline Orb" /></td>
+      <td><span class="record-name">Feline Orb</span><br /><img src="/assets/img/miscellaneous/feline orb.gif" alt="Feline Orb" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows 3% physical damage reduction.</td>
     </tr>
     <tr>
-      <td><span class="record-name">Gumball of Power</span><br /><img src="/assets/img/miscellaneous/gumball of power.gif" alt="Gumball of Power" /></td>
+      <td><span class="record-name">Gumball of Power</span><br /><img src="/assets/img/miscellaneous/gumball of power.gif" alt="Gumball of Power" /><br /><img src="/assets/img/icons/euro.gif" alt="Price" /><span style="vertical-align: middle; margin-left: 0.25em;">0</span></td>
       <td>Bestows +3 to all stats.</td>
     </tr>
   </tbody>
