--- a/compendium/mechanics.html
+++ b/compendium/mechanics.html
@@ -55,72 +55,305 @@
 
 <hr />
 
+<h2 id="stats">Stats</h2>
+
+<p>Stats can be separated into <a href="#vital-stats">vital stats</a>, <a href="#primary-stats">primary stats</a> and <a href="#secondary-stats">secondary stats</a>.</p>
+
+<ul>
+  <li><strong>Vital stats</strong> are the most important to watch and may fluctuate frequently.</li>
+  <li><strong>Primary stats</strong> shape your overall development.</li>
+  <li><strong>Secondary stats</strong> affect how well you do in battle.</li>
+</ul>
+
+<h3 id="vital-stats">Vital Stats</h3>
+
+<p>You gain <em>XP</em> from defeating enemies. You gain more of it when enemies are closer to your level or above it.</p>
+
+<p>Each time you level up, you gain 20 <em>HP</em> and 20 <em>EP</em>, and your HP and EP are fully restored.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Stat</th>
+      <th>Effect</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>XP</td>
+      <td>Allows you to level up when you accumulate enough of it.</td>
+    </tr>
+    <tr>
+      <td>HP</td>
+      <td>Keeps you alive.</td>
+    </tr>
+    <tr>
+      <td>EP</td>
+      <td>Allows you to use skills.</td>
+    </tr>
+  </tbody>
+</table>
+
 <h3 id="primary-stats">Primary Stats</h3>
 
-<h4 id="strength">Strength</h4>
+<p>Each time you level up, you gain 5 <em>Stat Points</em> to distribute among <em>Strength</em>, <em>Dexterity</em> and <em>Wisdom</em>.</p>
 
-<ul>
-  <li>Increases <strong>mace</strong>, <strong>sword</strong>, <strong>axe</strong> and <strong>spear</strong> damage.</li>
-  <li>Increases <strong>critical damage</strong>.</li>
-</ul>
+<p>Each of the three primary stats increases your damage dealt with one or more weapon types, and increases one or more secondary stats.</p>
 
-<h4 id="dexterity">Dexterity</h4>
+<p>A stat needs to be high enough in order to wield a particular piece of <a href="#equipment">equipment</a>.</p>
 
-<ul>
-  <li>Increases <strong>bow</strong> damage.</li>
-  <li>Increases <strong>accuracy</strong>.</li>
-  <li>Increases <strong>critical chance</strong>.</li>
-  <li>Increases <strong>block chance</strong>.</li>
-</ul>
-
-<h4 id="wisdom">Wisdom</h4>
-
-<ul>
-  <li>Increases <strong>wand</strong> damage.</li>
-  <li>Increases <strong>elemental reduction</strong>.</li>
-</ul>
-
-<hr />
+<table>
+  <thead>
+    <tr>
+      <th>Stat</th>
+      <th>Weapons Empowered</th>
+      <th>Secondary Bonuses</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Strength</td>
+      <td>Mace, sword, axe, spear</td>
+      <td>Critical damage</td>
+    </tr>
+    <tr>
+      <td>Dexterity</td>
+      <td>Bow</td>
+      <td>Accuracy, critical chance, block chance</td>
+    </tr>
+    <tr>
+      <td>Wisdom</td>
+      <td>Wand</td>
+      <td>Elemental reduction</td>
+    </tr>
+  </tbody>
+</table>
 
 <h3 id="secondary-stats">Secondary Stats</h3>
 
-<h4 id="defence">Defence</h4>
+<p>These stats are derived from your primary stats and the equipment you wield (and <a href="#passive-bonuses">passive items</a> you hold).</p>
 
-<ul>
-  <li>Decreases damage taken by a flat value.</li>
-  <li>Is calculated <em>before</em> reductions.</li>
-</ul>
+<table>
+  <thead>
+    <tr>
+      <th>Stat</th>
+      <th>Effect</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Accuracy</td>
+      <td>Determines chance to hit.</td>
+    </tr>
+    <tr>
+      <td>Critical Chance</td>
+      <td>Determines chance to land a critical hit.</td>
+    </tr>
+    <tr>
+      <td>Critical Damage</td>
+      <td>Determines critical hit damage compared to a regular attack.</td>
+    </tr>
+    <tr>
+      <td>Defence</td>
+      <td>Decreases damage taken by a <em>flat value</em>. Calculated before reductions.<br /><details><summary class="bar-descriptor">Flat value?</summary>This means that every point of defence will reduce damage taken by one point.</details></td>
+    </tr>
+    <tr>
+      <td>Reduction</td>
+      <td>Decreases damage taken by a <em>percentage</em>. Calculated after defence.</td>
+    </tr>
+    <tr>
+      <td>Block Chance</td>
+      <td>Determines chance to nullify an enemy attack.</td>
+    </tr>
+  </tbody>
+</table>
 
-<h4 id="reductions">Reductions</h4>
+<h2 id="skills">Skills</h2>
 
-<ul>
-  <li>Decrease damage taken by a percentage.</li>
-  <li>Are calculated <em>after</em> defence.</li>
-</ul>
-
-<hr />
+<p>You may keep up to <em>4</em> skills. To get another skill after four, you must relinquish one that you already have.</p>
 
 <h3 id="stat-altering-skills">Stat-altering Skills</h3>
 
+<p>Some skills alter user stats and/or opponent stats.</p>
+
+<p>Stats will return to their original values after</p>
+
 <ul>
-  <li>Some skills alter user stats and/or target stats.</li>
-  <li>After battle, any modified stats will be restored to their original values.</li>
-  <li>Changing equipment in battle will reset all your stat changes.</li>
+  <li>Battle</li>
+  <li>Changing equipment in battle.</li>
 </ul>
 
-<hr />
+<h2 id="items">Items</h2>
+
+<p>You may carry up to <em>9</em> items, unless you have the <a href="miscellaneous#chasmic-rucksack">Chasmic Rucksack</a>, which allows you to carry up to <em>16</em>.</p>
+
+<h3 id="equipment">Equipment</h3>
+
+<p>In general, you can wield 1 weapon, 1 piece of armour and 1 shield at a time. However, if you wield a bow, you may not wield a shield under most circumstances.</p>
+
+<p>You must meet the stat requirement of a piece of equipment in order to wield it.</p>
+
+<h4 id="modified-equipment">Modified equipment</h4>
+
+<p>Sometimes an enemy will drop a piece of equipment with a modifier (prefix). This is a regular piece of equipment with an additional enhancement.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Modifier Name</th>
+      <th>Stat Enhanced</th>
+      <th>Enhancement Amount</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Exotic</td>
+      <td>Sell price</td>
+      <td>+100% to +300%</td>
+    </tr>
+    <tr>
+      <td>Big</td>
+      <td>Power</td>
+      <td>+2 to +4</td>
+    </tr>
+    <tr>
+      <td>Keen</td>
+      <td>Critical chance</td>
+      <td>+1% to +2%</td>
+    </tr>
+    <tr>
+      <td>Stony</td>
+      <td>Earth reduction</td>
+      <td>+2% to +4%</td>
+    </tr>
+    <tr>
+      <td>Icy</td>
+      <td>Water reduction</td>
+      <td>+2% to +4%</td>
+    </tr>
+    <tr>
+      <td>Fiery</td>
+      <td>Fire reduction</td>
+      <td>+2% to +4%</td>
+    </tr>
+    <tr>
+      <td>Sturdy</td>
+      <td>Defence</td>
+      <td>+2 to +4</td>
+    </tr>
+    <tr>
+      <td>Heavy</td>
+      <td>Block chance</td>
+      <td>+1% to +2%</td>
+    </tr>
+    <tr>
+      <td>Giant</td>
+      <td>Power</td>
+      <td>+4 to +8</td>
+    </tr>
+    <tr>
+      <td>Deadly</td>
+      <td>Critical chance</td>
+      <td>+2% to +4%</td>
+    </tr>
+    <tr>
+      <td>Gaian</td>
+      <td>Earth reduction</td>
+      <td>+4% to +8%</td>
+    </tr>
+    <tr>
+      <td>Glacial</td>
+      <td>Water reduction</td>
+      <td>+4% to +8%</td>
+    </tr>
+    <tr>
+      <td>Molten</td>
+      <td>Fire reduction</td>
+      <td>+4% to +8%</td>
+    </tr>
+    <tr>
+      <td>Robust</td>
+      <td>Defence</td>
+      <td>+4 to +8</td>
+    </tr>
+    <tr>
+      <td>Massive</td>
+      <td>Block chance</td>
+      <td>+2% to +4%</td>
+    </tr>
+  </tbody>
+</table>
+
+<h3 id="passive-bonuses">Passive Bonuses</h3>
+
+<p>Some <a href="miscellaneous">Miscellaneous Items</a> present passive bonuses that benefit you as long as that item is in your inventory. They do not need to be equipped.</p>
+
+<h2 id="elements">Elements</h2>
+
+<h3 id="reductions">Reductions</h3>
+
+<p><span class="callout">
+  🚧 This section still needs to be completed.
+</span></p>
 
 <h3 id="elemental-ailments">Elemental Ailments</h3>
 
-<ul>
-  <li>Elemental skills have a chance to cause an ailment upon the target.</li>
-  <li>Ailments are removed after battle.</li>
-</ul>
+<p>Elemental attacks that deal damage (except Poison Ivy) have a chance to inflict an ailment upon the target. Ailments are removed after battle.</p>
 
-<h4 id="earth-skills">Earth Skills</h4>
+<p>Elementally-imbued weapons in general do not inflict ailments. However, <em>lightning weapons</em> are special: While wielding one, non-elemental attacks have a chance of inflicting paralysis.</p>
+
+<table>
+  <thead>
+    <tr>
+      <th>Skill Element</th>
+      <th>Ailment</th>
+      <th>Effect</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>Earth</td>
+      <td>30% chance to <em>ground</em></td>
+      <td>Lose one turn.</td>
+    </tr>
+    <tr>
+      <td>Lightning</td>
+      <td>20% chance to <em>paralyze</em></td>
+      <td>Lose turns until recovery. 50% chance of recovery each turn.</td>
+    </tr>
+    <tr>
+      <td>Poison</td>
+      <td>100% chance to <em>poison</em></td>
+      <td>Lose approximately 2% of your max HP each turn.</td>
+    </tr>
+    <tr>
+      <td>Water</td>
+      <td>50% chance to <em>drown</em> when 50% or more damage is dealt</td>
+      <td>Die immediately.</td>
+    </tr>
+    <tr>
+      <td>Ice</td>
+      <td>15% chance to <em>freeze</em></td>
+      <td>Lose turns until recovery. 25% chance of recovery each turn.</td>
+    </tr>
+    <tr>
+      <td>Fire</td>
+      <td>25% chance to <em>ignite</em></td>
+      <td>Lose approximately 25% of damage dealt by igniting attack in HP each turn until recovery. 25% chance of recovery each turn.</td>
+    </tr>
+    <tr>
+      <td>Petrification</td>
+      <td>100% chance to <em>petrify</em></td>
+      <td>Lose turns until recovery. 25% chance of recovery each turn.</td>
+    </tr>
+  </tbody>
+</table>
+
+<h4 id="additional-notes">Additional Notes</h4>
 
 <ul>
-  <li></li>
+  <li>If you ignite while frozen, you will no longer be frozen, and vice versa.</li>
+  <li>If you are petrified while paralyzed and/or frozen, you will no longer be paralyzed and/or frozen.</li>
 </ul>
 
           </div>
