--- a/compendium/mechanics.html
+++ b/compendium/mechanics.html
@@ -53,7 +53,34 @@
   🚧 This page is a work in progress.
 </span></p>
 
+<div class="callout">
+  <strong>Contents</strong>
+  <ul class="horizontal">
+    <li>
+      <a href="#battle">Battle</a>
+    </li>
+    <li>
+      <a href="#stats">Stats</a>
+    </li>
+    <li>
+      <a href="#skills">Skills</a>
+    </li>
+    <li>
+      <a href="#items">Items</a>
+    </li>
+    <li>
+      <a href="#elements">Elements</a>
+    </li>
+  </ul>
+</div>
+
 <hr />
+
+<h2 id="battle">Battle</h2>
+
+<p><span class="callout">
+  🚧 This section isn’t written yet.
+</span></p>
 
 <h2 id="stats">Stats</h2>
 
@@ -67,7 +94,7 @@
 
 <h3 id="vital-stats">Vital Stats</h3>
 
-<p>You gain <em>XP</em> from defeating enemies. You gain more of it when enemies are closer to your level or above it.</p>
+<p>You gain <em>XP</em> from defeating enemies. You gain more XP when the enemies you defeat are closer to your level or above it.</p>
 
 <p>Each time you level up, you gain 20 <em>HP</em> and 20 <em>EP</em>, and your HP and EP are fully restored.</p>
 
@@ -163,7 +190,7 @@
     </tr>
     <tr>
       <td>Block Chance</td>
-      <td>Determines chance to nullify an enemy attack.</td>
+      <td>Determines chance to nullify an enemy attack against you.</td>
     </tr>
   </tbody>
 </table>
@@ -293,7 +320,7 @@
 <h3 id="reductions">Reductions</h3>
 
 <p><span class="callout">
-  🚧 This section still needs to be completed.
+  🚧 This section isn’t written yet.
 </span></p>
 
 <h3 id="elemental-ailments">Elemental Ailments</h3>
